src/test/deca/context/invalid/instanceof-noType.context
instanceof-noType.deca:4:
